{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 11,
  "lineage": "7374a18a-22a3-c886-4ab4-b579d39a4f13",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.200.237.4",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-04-24T23:20:04.269-07:00",
            "id": "projects/intern-satya-sandbox/regions/asia-south1/addresses/voice-app-static-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "voice-app-static-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "intern-satya-sandbox",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/intern-satya-sandbox/regions/asia-south1/addresses/voice-app-static-ip"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-04-24T23:24:48.949-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/intern-satya-sandbox/global/firewalls/voice-app-allow-http",
            "log_config": [],
            "name": "voice-app-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/intern-satya-sandbox/global/networks/default",
            "priority": 1000,
            "project": "intern-satya-sandbox",
            "self_link": "https://www.googleapis.com/compute/v1/projects/intern-satya-sandbox/global/firewalls/voice-app-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "voice-app"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-04-24T23:24:48.480-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/intern-satya-sandbox/global/firewalls/voice-app-allow-ssh",
            "log_config": [],
            "name": "voice-app-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/intern-satya-sandbox/global/networks/default",
            "priority": 1000,
            "project": "intern-satya-sandbox",
            "self_link": "https://www.googleapis.com/compute/v1/projects/intern-satya-sandbox/global/firewalls/voice-app-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "voice-app"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260421",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/intern-satya-sandbox/zones/asia-south1-a/disks/voice-app-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "app": "voice-converter",
              "env": "prod"
            },
            "enable_display": false,
            "id": "projects/intern-satya-sandbox/zones/asia-south1-a/instances/voice-app-vm",
            "instance_id": "7167894184911823069",
            "label_fingerprint": "ywFnz4nTTds=",
            "labels": {
              "app": "voice-converter",
              "env": "prod"
            },
            "machine_type": "e2-medium",
            "metadata": {
              "startup-script": "#!/bin/bash\nset -euo pipefail\n\n# Log everything so you can debug with:\n# gcloud compute instances get-serial-port-output voice-app-vm\nexec \u003e /var/log/startup.log 2\u003e\u00261\n\necho \"=== Starting setup at $(date) ===\"\n\napt-get update -y\napt-get install -y docker.io\n\nsystemctl start docker\nsystemctl enable docker\n\n# Wait for Docker to be ready\nsleep 5\n\n# Pull from Docker Hub\ndocker pull satyareddy9/voice-app:latest\n\n# Stop old containe [...]
            },
            "metadata_fingerprint": "e1N7E6UhwDo=",
            "name": "voice-app-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.200.237.4",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/intern-satya-sandbox/global/networks/default",
                "network_ip": "10.160.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/intern-satya-sandbox/regions/asia-south1/subnetworks/default",
                "subnetwork_project": "intern-satya-sandbox"
              }
            ],
            "project": "intern-satya-sandbox",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/intern-satya-sandbox/zones/asia-south1-a/instances/voice-app-vm",
            "service_account": [
              {
                "email": "voice-app-sa@intern-satya-sandbox.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "voice-app"
            ],
            "tags_fingerprint": "5z_VcDFLda0=",
            "terraform_labels": {
              "app": "voice-converter",
              "env": "prod"
            },
            "zone": "asia-south1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_address.static_ip",
            "google_service_account.voice_sa"
          ]
        }
      ]
    }
  ]
}